Refactor for W06's assignment for error handling/data validation practice
